k8s/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  namespace: cloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
        - name: catalog-service
          image: cloudappacr2026.azurecr.io/catalog-service:v1
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
          readinessProbe:
            httpGet:
              path: /api/products
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/products
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 15
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kv-secrets"
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: cloud-app
spec:
  selector:
    app: catalog-service
  ports:
    - port: 8081
      targetPort: 8081
